Programa-VSAR/Compilador/COM/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     declaration -> HASH INCLUDE LESS ID GREATER
Rule 7     declaration -> USING NAMESPACE STD SEMICOLON
Rule 8     var_declaration -> type_specifier ID SEMICOLON
Rule 9     var_declaration -> type_specifier ID COMMA ID SEMICOLON
Rule 10    var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON
Rule 11    var_declaration -> type_specifier ID EQUAL var SEMICOLON
Rule 12    var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
Rule 13    type_specifier -> INT
Rule 14    type_specifier -> VOID
Rule 15    type_specifier -> STRING
Rule 16    fun_declaration -> type_specifier ID LPAREN params RPAREN compount_stmt
Rule 17    params -> param_list
Rule 18    params -> VOID
Rule 19    param_list -> param_list COMMA param
Rule 20    param_list -> param
Rule 21    param_list -> empty
Rule 22    param -> type_specifier ID
Rule 23    param -> type_specifier ID LBRACKET RBRACKET
Rule 24    compount_stmt -> LBLOCK local_declarations statement_list RBLOCK
Rule 25    local_declarations -> local_declarations var_declaration
Rule 26    local_declarations -> empty
Rule 27    statement_list -> statement_list statement
Rule 28    statement_list -> empty
Rule 29    statement -> expression_stmt
Rule 30    statement -> compount_stmt
Rule 31    statement -> selection_stmt
Rule 32    statement -> iteration_stmt
Rule 33    statement -> return_stmt
Rule 34    expression_stmt -> expression SEMICOLON
Rule 35    expression_stmt -> SEMICOLON
Rule 36    expression_stmt -> COUT LGREATER QUOTES ID QUOTES SEMICOLON
Rule 37    expression_stmt -> COUT LGREATER QUOTES ID QUOTES LGREATER ENDL SEMICOLON
Rule 38    expression_stmt -> COUT LGREATER STRING SEMICOLON
Rule 39    expression_stmt -> COUT LGREATER STRING LGREATER ENDL SEMICOLON
Rule 40    expression_stmt -> COUT LGREATER var SEMICOLON
Rule 41    expression_stmt -> COUT LGREATER var LGREATER ENDL SEMICOLON
Rule 42    expression_stmt -> COUT LGREATER var LGREATER var SEMICOLON
Rule 43    expression_stmt -> COUT LGREATER var LGREATER var LGREATER ENDL SEMICOLON
Rule 44    expression_stmt -> CIN RGREATER var SEMICOLON
Rule 45    expression_stmt -> CIN RGREATER var RGREATER var SEMICOLON
Rule 46    expression_stmt -> CIN POINT GET LPAREN RPAREN SEMICOLON
Rule 47    expression_stmt -> ID PLUSPLUS
Rule 48    expression_stmt -> PLUSPLUS ID
Rule 49    expression_stmt -> ID MINUSMINUS
Rule 50    expression_stmt -> MINUSMINUS ID
Rule 51    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 52    selection_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 53    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 54    iteration_stmt -> <empty>
Rule 55    iteration_stmt -> FOR LPAREN var SEMICOLON expression SEMICOLON expression RPAREN statement
Rule 56    iteration_stmt -> FOR LPAREN var SEMICOLON expression SEMICOLON var PLUSPLUS RPAREN statement
Rule 57    iteration_stmt -> FOR LPAREN var SEMICOLON expression SEMICOLON PLUSPLUS var RPAREN statement
Rule 58    iteration_stmt -> FOR LPAREN var SEMICOLON expression SEMICOLON var MINUSMINUS RPAREN statement
Rule 59    iteration_stmt -> FOR LPAREN var SEMICOLON expression SEMICOLON MINUSMINUS var RPAREN statement
Rule 60    return_stmt -> RETURN SEMICOLON
Rule 61    return_stmt -> RETURN expression SEMICOLON
Rule 62    expression -> var EQUAL expression
Rule 63    expression -> simple_expression
Rule 64    var -> ID
Rule 65    var -> ID LBRACKET expression RBRACKET
Rule 66    simple_expression -> additive_expression relop additive_expression
Rule 67    simple_expression -> additive_expression
Rule 68    relop -> LESS
Rule 69    relop -> LESSEQUAL
Rule 70    relop -> GREATER
Rule 71    relop -> GREATEREQUAL
Rule 72    relop -> DEQUAL
Rule 73    relop -> DISTINT
Rule 74    relop -> QUOTES
Rule 75    additive_expression -> additive_expression addop term
Rule 76    additive_expression -> term
Rule 77    addop -> PLUS
Rule 78    addop -> MINUS
Rule 79    term -> term mulop factor
Rule 80    term -> factor
Rule 81    mulop -> TIMES
Rule 82    mulop -> DIVIDE
Rule 83    factor -> LPAREN expression RPAREN
Rule 84    factor -> var
Rule 85    factor -> call
Rule 86    factor -> NUMBER
Rule 87    call -> ID LPAREN args RPAREN
Rule 88    args -> args_list
Rule 89    args -> empty
Rule 90    args_list -> args_list COMMA expression
Rule 91    args_list -> expression
Rule 92    empty -> <empty>

Terminals, with rules where they appear

CIN                  : 44 45 46
COMMA                : 9 19 90
COUT                 : 36 37 38 39 40 41 42 43
DEQUAL               : 72
DISTINT              : 73
DIVIDE               : 82
ELSE                 : 52
ENDL                 : 37 39 41 43
EQUAL                : 10 11 62
FOR                  : 55 56 57 58 59
GET                  : 46
GREATER              : 6 70
GREATEREQUAL         : 71
HASH                 : 6
ID                   : 6 8 9 9 10 11 12 16 22 23 36 37 47 48 49 50 64 65 87
IF                   : 51 52
INCLUDE              : 6
INT                  : 13
LBLOCK               : 24
LBRACKET             : 12 23 65
LESS                 : 6 68
LESSEQUAL            : 69
LGREATER             : 36 37 37 38 39 39 40 41 41 42 42 43 43 43
LPAREN               : 16 46 51 52 53 55 56 57 58 59 83 87
MINUS                : 78
MINUSMINUS           : 49 50 58 59
NAMESPACE            : 7
NUMBER               : 10 12 86
PLUS                 : 77
PLUSPLUS             : 47 48 56 57
POINT                : 46
QUOTES               : 36 36 37 37 74
RBLOCK               : 24
RBRACKET             : 12 23 65
RETURN               : 60 61
RGREATER             : 44 45 45
RPAREN               : 16 46 51 52 53 55 56 57 58 59 83 87
SEMICOLON            : 7 8 9 10 11 12 34 35 36 37 38 39 40 41 42 43 44 45 46 55 55 56 56 57 57 58 58 59 59 60 61
STD                  : 7
STRING               : 15 38 39
TIMES                : 81
USING                : 7
VOID                 : 14 18
WHILE                : 53
error                : 

Nonterminals, with rules where they appear

additive_expression  : 66 66 67 75
addop                : 75
args                 : 87
args_list            : 88 90
call                 : 85
compount_stmt        : 16 30
declaration          : 2 3
declaration_list     : 1 2
empty                : 21 26 28 89
expression           : 34 51 52 53 55 55 56 57 58 59 61 62 65 83 90 91
expression_stmt      : 29
factor               : 79 80
fun_declaration      : 5
iteration_stmt       : 32
local_declarations   : 24 25
mulop                : 79
param                : 19 20
param_list           : 17 19
params               : 16
program              : 0
relop                : 66
return_stmt          : 33
selection_stmt       : 31
simple_expression    : 63
statement            : 27 51 52 52 53 55 56 57 58 59
statement_list       : 24 27
term                 : 75 76 79
type_specifier       : 8 9 10 11 12 16 22 23
var                  : 11 40 41 42 42 43 43 44 45 45 55 56 56 57 57 58 58 59 59 62 84
var_declaration      : 4 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . HASH INCLUDE LESS ID GREATER
    (7) declaration -> . USING NAMESPACE STD SEMICOLON
    (8) var_declaration -> . type_specifier ID SEMICOLON
    (9) var_declaration -> . type_specifier ID COMMA ID SEMICOLON
    (10) var_declaration -> . type_specifier ID EQUAL NUMBER SEMICOLON
    (11) var_declaration -> . type_specifier ID EQUAL var SEMICOLON
    (12) var_declaration -> . type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (16) fun_declaration -> . type_specifier ID LPAREN params RPAREN compount_stmt
    (13) type_specifier -> . INT
    (14) type_specifier -> . VOID
    (15) type_specifier -> . STRING

    HASH            shift and go to state 5
    USING           shift and go to state 11
    INT             shift and go to state 8
    VOID            shift and go to state 1
    STRING          shift and go to state 6

    type_specifier                 shift and go to state 2
    fun_declaration                shift and go to state 10
    declaration_list               shift and go to state 9
    var_declaration                shift and go to state 3
    program                        shift and go to state 4
    declaration                    shift and go to state 7

state 1

    (14) type_specifier -> VOID .

    ID              reduce using rule 14 (type_specifier -> VOID .)


state 2

    (8) var_declaration -> type_specifier . ID SEMICOLON
    (9) var_declaration -> type_specifier . ID COMMA ID SEMICOLON
    (10) var_declaration -> type_specifier . ID EQUAL NUMBER SEMICOLON
    (11) var_declaration -> type_specifier . ID EQUAL var SEMICOLON
    (12) var_declaration -> type_specifier . ID LBRACKET NUMBER RBRACKET SEMICOLON
    (16) fun_declaration -> type_specifier . ID LPAREN params RPAREN compount_stmt

    ID              shift and go to state 12


state 3

    (4) declaration -> var_declaration .

    HASH            reduce using rule 4 (declaration -> var_declaration .)
    USING           reduce using rule 4 (declaration -> var_declaration .)
    INT             reduce using rule 4 (declaration -> var_declaration .)
    VOID            reduce using rule 4 (declaration -> var_declaration .)
    STRING          reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 4

    (0) S' -> program .



state 5

    (6) declaration -> HASH . INCLUDE LESS ID GREATER

    INCLUDE         shift and go to state 13


state 6

    (15) type_specifier -> STRING .

    ID              reduce using rule 15 (type_specifier -> STRING .)


state 7

    (3) declaration_list -> declaration .

    HASH            reduce using rule 3 (declaration_list -> declaration .)
    USING           reduce using rule 3 (declaration_list -> declaration .)
    INT             reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)
    STRING          reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 8

    (13) type_specifier -> INT .

    ID              reduce using rule 13 (type_specifier -> INT .)


state 9

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . HASH INCLUDE LESS ID GREATER
    (7) declaration -> . USING NAMESPACE STD SEMICOLON
    (8) var_declaration -> . type_specifier ID SEMICOLON
    (9) var_declaration -> . type_specifier ID COMMA ID SEMICOLON
    (10) var_declaration -> . type_specifier ID EQUAL NUMBER SEMICOLON
    (11) var_declaration -> . type_specifier ID EQUAL var SEMICOLON
    (12) var_declaration -> . type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (16) fun_declaration -> . type_specifier ID LPAREN params RPAREN compount_stmt
    (13) type_specifier -> . INT
    (14) type_specifier -> . VOID
    (15) type_specifier -> . STRING

    $end            reduce using rule 1 (program -> declaration_list .)
    HASH            shift and go to state 5
    USING           shift and go to state 11
    INT             shift and go to state 8
    VOID            shift and go to state 1
    STRING          shift and go to state 6

    type_specifier                 shift and go to state 2
    fun_declaration                shift and go to state 10
    var_declaration                shift and go to state 3
    declaration                    shift and go to state 14

state 10

    (5) declaration -> fun_declaration .

    HASH            reduce using rule 5 (declaration -> fun_declaration .)
    USING           reduce using rule 5 (declaration -> fun_declaration .)
    INT             reduce using rule 5 (declaration -> fun_declaration .)
    VOID            reduce using rule 5 (declaration -> fun_declaration .)
    STRING          reduce using rule 5 (declaration -> fun_declaration .)
    $end            reduce using rule 5 (declaration -> fun_declaration .)


state 11

    (7) declaration -> USING . NAMESPACE STD SEMICOLON

    NAMESPACE       shift and go to state 15


state 12

    (8) var_declaration -> type_specifier ID . SEMICOLON
    (9) var_declaration -> type_specifier ID . COMMA ID SEMICOLON
    (10) var_declaration -> type_specifier ID . EQUAL NUMBER SEMICOLON
    (11) var_declaration -> type_specifier ID . EQUAL var SEMICOLON
    (12) var_declaration -> type_specifier ID . LBRACKET NUMBER RBRACKET SEMICOLON
    (16) fun_declaration -> type_specifier ID . LPAREN params RPAREN compount_stmt

    SEMICOLON       shift and go to state 16
    COMMA           shift and go to state 19
    EQUAL           shift and go to state 17
    LBRACKET        shift and go to state 18
    LPAREN          shift and go to state 20


state 13

    (6) declaration -> HASH INCLUDE . LESS ID GREATER

    LESS            shift and go to state 21


state 14

    (2) declaration_list -> declaration_list declaration .

    HASH            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    USING           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    STRING          reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 15

    (7) declaration -> USING NAMESPACE . STD SEMICOLON

    STD             shift and go to state 22


state 16

    (8) var_declaration -> type_specifier ID SEMICOLON .

    HASH            reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    USING           reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    INT             reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    VOID            reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    STRING          reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    $end            reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    RBLOCK          reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    SEMICOLON       reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    COUT            reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    CIN             reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    ID              reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    PLUSPLUS        reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    MINUSMINUS      reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    LBLOCK          reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    IF              reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    WHILE           reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    FOR             reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    RETURN          reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    LPAREN          reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)
    NUMBER          reduce using rule 8 (var_declaration -> type_specifier ID SEMICOLON .)


state 17

    (10) var_declaration -> type_specifier ID EQUAL . NUMBER SEMICOLON
    (11) var_declaration -> type_specifier ID EQUAL . var SEMICOLON
    (64) var -> . ID
    (65) var -> . ID LBRACKET expression RBRACKET

    NUMBER          shift and go to state 23
    ID              shift and go to state 25

    var                            shift and go to state 24

state 18

    (12) var_declaration -> type_specifier ID LBRACKET . NUMBER RBRACKET SEMICOLON

    NUMBER          shift and go to state 26


state 19

    (9) var_declaration -> type_specifier ID COMMA . ID SEMICOLON

    ID              shift and go to state 27


state 20

    (16) fun_declaration -> type_specifier ID LPAREN . params RPAREN compount_stmt
    (17) params -> . param_list
    (18) params -> . VOID
    (19) param_list -> . param_list COMMA param
    (20) param_list -> . param
    (21) param_list -> . empty
    (22) param -> . type_specifier ID
    (23) param -> . type_specifier ID LBRACKET RBRACKET
    (92) empty -> .
    (13) type_specifier -> . INT
    (14) type_specifier -> . VOID
    (15) type_specifier -> . STRING

    VOID            shift and go to state 30
    COMMA           reduce using rule 92 (empty -> .)
    RPAREN          reduce using rule 92 (empty -> .)
    INT             shift and go to state 8
    STRING          shift and go to state 6

    type_specifier                 shift and go to state 28
    param_list                     shift and go to state 29
    param                          shift and go to state 31
    params                         shift and go to state 32
    empty                          shift and go to state 33

state 21

    (6) declaration -> HASH INCLUDE LESS . ID GREATER

    ID              shift and go to state 34


state 22

    (7) declaration -> USING NAMESPACE STD . SEMICOLON

    SEMICOLON       shift and go to state 35


state 23

    (10) var_declaration -> type_specifier ID EQUAL NUMBER . SEMICOLON

    SEMICOLON       shift and go to state 36


state 24

    (11) var_declaration -> type_specifier ID EQUAL var . SEMICOLON

    SEMICOLON       shift and go to state 37


state 25

    (64) var -> ID .
    (65) var -> ID . LBRACKET expression RBRACKET

    SEMICOLON       reduce using rule 64 (var -> ID .)
    RPAREN          reduce using rule 64 (var -> ID .)
    RGREATER        reduce using rule 64 (var -> ID .)
    LGREATER        reduce using rule 64 (var -> ID .)
    LBRACKET        shift and go to state 38


state 26

    (12) var_declaration -> type_specifier ID LBRACKET NUMBER . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 39


state 27

    (9) var_declaration -> type_specifier ID COMMA ID . SEMICOLON

    SEMICOLON       shift and go to state 40


state 28

    (22) param -> type_specifier . ID
    (23) param -> type_specifier . ID LBRACKET RBRACKET

    ID              shift and go to state 41


state 29

    (17) params -> param_list .
    (19) param_list -> param_list . COMMA param

    RPAREN          reduce using rule 17 (params -> param_list .)
    COMMA           shift and go to state 42


state 30

    (18) params -> VOID .
    (14) type_specifier -> VOID .

    RPAREN          reduce using rule 18 (params -> VOID .)
    ID              reduce using rule 14 (type_specifier -> VOID .)


state 31

    (20) param_list -> param .

    COMMA           reduce using rule 20 (param_list -> param .)
    RPAREN          reduce using rule 20 (param_list -> param .)


state 32

    (16) fun_declaration -> type_specifier ID LPAREN params . RPAREN compount_stmt

    RPAREN          shift and go to state 43


state 33

    (21) param_list -> empty .

    COMMA           reduce using rule 21 (param_list -> empty .)
    RPAREN          reduce using rule 21 (param_list -> empty .)


state 34

    (6) declaration -> HASH INCLUDE LESS ID . GREATER

    GREATER         shift and go to state 44


state 35

    (7) declaration -> USING NAMESPACE STD SEMICOLON .

    HASH            reduce using rule 7 (declaration -> USING NAMESPACE STD SEMICOLON .)
    USING           reduce using rule 7 (declaration -> USING NAMESPACE STD SEMICOLON .)
    INT             reduce using rule 7 (declaration -> USING NAMESPACE STD SEMICOLON .)
    VOID            reduce using rule 7 (declaration -> USING NAMESPACE STD SEMICOLON .)
    STRING          reduce using rule 7 (declaration -> USING NAMESPACE STD SEMICOLON .)
    $end            reduce using rule 7 (declaration -> USING NAMESPACE STD SEMICOLON .)


state 36

    (10) var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .

    HASH            reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    USING           reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    INT             reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    VOID            reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    STRING          reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    $end            reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    RBLOCK          reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    SEMICOLON       reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    COUT            reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    CIN             reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    ID              reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    PLUSPLUS        reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    MINUSMINUS      reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    LBLOCK          reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    IF              reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    WHILE           reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    FOR             reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    RETURN          reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    LPAREN          reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    NUMBER          reduce using rule 10 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)


state 37

    (11) var_declaration -> type_specifier ID EQUAL var SEMICOLON .

    HASH            reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    USING           reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    INT             reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    VOID            reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    STRING          reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    $end            reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    RBLOCK          reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    SEMICOLON       reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    COUT            reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    CIN             reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    ID              reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    PLUSPLUS        reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    MINUSMINUS      reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    LBLOCK          reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    IF              reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    WHILE           reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    FOR             reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    RETURN          reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    LPAREN          reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    NUMBER          reduce using rule 11 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)


state 38

    (65) var -> ID LBRACKET . expression RBRACKET
    (62) expression -> . var EQUAL expression
    (63) expression -> . simple_expression
    (64) var -> . ID
    (65) var -> . ID LBRACKET expression RBRACKET
    (66) simple_expression -> . additive_expression relop additive_expression
    (67) simple_expression -> . additive_expression
    (75) additive_expression -> . additive_expression addop term
    (76) additive_expression -> . term
    (79) term -> . term mulop factor
    (80) term -> . factor
    (83) factor -> . LPAREN expression RPAREN
    (84) factor -> . var
    (85) factor -> . call
    (86) factor -> . NUMBER
    (87) call -> . ID LPAREN args RPAREN

    ID              shift and go to state 53
    LPAREN          shift and go to state 46
    NUMBER          shift and go to state 47

    term                           shift and go to state 49
    call                           shift and go to state 48
    factor                         shift and go to state 50
    var                            shift and go to state 51
    simple_expression              shift and go to state 45
    expression                     shift and go to state 52
    additive_expression            shift and go to state 54

state 39

    (12) var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 55


state 40

    (9) var_declaration -> type_specifier ID COMMA ID SEMICOLON .
